option('kernel_cflags', type : 'string', description : 'Extra c compiler arguments for kernel')
option('kernel_cxxflags', type : 'string', description : 'Extra cpp compiler arguments for kernel')

option('modules_cflags', type : 'string', description : 'Extra c compiler arguments for modules')
option('modules_cxxflags', type : 'string', description : 'Extra cpp compiler arguments for modules')

option('kernel_ubsan', type : 'boolean', value : true, description : 'Enable ubsanitizer in kernel')
option('modules_ubsan', type : 'boolean', value : false, description : 'Enable ubsanitizer in modules')

option('5lvl_paging', type : 'boolean', value : false, description : 'Enable 5 level paging in kernel')
option('syscall_debug', type : 'boolean', value : false, description : 'Print syscall log on serial')

option('qemu_debug', type : 'boolean', value : false, description : 'Enable interrupt logging in qemu and start monitor on telnet:127.0.0.1:12345. Enables \'noaccel\'')
option('gdb', type : 'boolean', value : false, description : 'Add -s -S to qemu. Enables \'qemu_debug\'')

option('noaccel', type : 'boolean', value : false, description : 'Disable qemu accelerators')
option('vnc', type : 'boolean', value : false, description : 'Start VNC server on 127.0.0.1:5901')

option('norun', type : 'boolean', value : false, description : 'Do not run qemu')